--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,20 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #838790;
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+:test {
+  margin: auto;
+  width: 50%;
+  border: 3px solid white;
+  padding: 10px;
+
 }
 
 a {
