--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-:test {
+#test {
   margin: auto;
   width: 50%;
   border: 3px solid white;
